fixed whitespace inconsistencies

--- a/src/sass/11_mobile.sass
+++ b/src/sass/11_mobile.sass
@@ -52,7 +52,7 @@ $break-mobile: 480px
       
     
     li:hover
-    	width: 36pt
+      width: 36pt
     
   
   #about 
@@ -83,9 +83,5 @@ $break-mobile: 480px
   #projects
     #project-container
       width: 180pt
-      margin: 0px auto
-
-      
-    
-  
+      margin: 0 auto
 
