--- a/src/sass/20_title.sass
+++ b/src/sass/20_title.sass
@@ -3,7 +3,7 @@
   width: 100%
   height: 100%
   box-sizing: border-box
-  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2)
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2)
 
   .title-light
     color: #6eb8f5
